Fix : code blocks line spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -61,6 +61,7 @@ code, pre {
   font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
   color:#333;
   font-size:12px;
+  white-space: pre-line;
 }
 
 pre {
